--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Streamer</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js" integrity="sha512-8BHxHDLsOHx+flIrQ0DrZcea7MkHqRU5GbTHmbdzMRnAaoCIkZ97PqZcXJkKZckMMhqfoeaJE+DNUVuyoQsO3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="bg-gray-900 text-white">
@@ -15,11 +14,6 @@
         <!-- Stream Status -->
         <div class="bg-gray-800 rounded-lg p-6 mb-8">
             <h2 class="text-2xl font-semibold mb-4">Stream Status</h2>
-            <div class="mb-4">
-                <label class="block text-gray-400 mb-2">YouTube Stream Key</label>
-                <input type="password" id="streamKey" class="w-full bg-gray-700 rounded px-4 py-2" 
-                       placeholder="Enter your YouTube stream key">
-            </div>
             <div class="grid grid-cols-2 gap-4">
                 <div class="bg-gray-700 rounded p-4">
                     <p class="text-gray-400">Status</p>
@@ -63,7 +57,7 @@
         </div>
     </div>
 
-  
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/app.js"></script>
 </body>
 </html>
